fix: remove Settings height on tablet size

--- a/src/components/Settings.css
+++ b/src/components/Settings.css
@@ -17,7 +17,6 @@
 @media (600px <= width) {
   #settings {
     width: 60%;
-    height: 50%;
   }
 
   #settings > div {
